# PyCon24-OpenTelemetry

./: .gitignore  README.md
aws-lambda-adot-example/data/: init_load.ipynb
aws-lambda-adot-example/doc/: architecture_diagram.drawio
aws-lambda-adot-example/lambda/: pyproject.toml  requirements.txt
aws-lambda-adot-example/lambda/src/: config.py  config.yaml  main.py
aws-lambda-adot-example/terraform/: alb.tf  backend.tf  dynamodb.tf  eks.tf  lambda.tf  terraform.tfvars  variables.tf  vpc.tf
aws-lambda-adot-example/terraform/manifests/: otel.values.yaml.tftpl
grafana-otel-example/: docker-compose.yaml  traffic_generator.py
grafana-otel-example/api-gateway/: pyproject.toml  requirements.txt
grafana-otel-example/api-gateway/src/: config.py  main.py  otel_instrumentation.py
grafana-otel-example/configs/grafana/: datasources.yaml
grafana-otel-example/configs/otel-collector/: otel-collector-config.yaml
grafana-otel-example/data/: init_load.ipynb
grafana-otel-example/doc/: architecture_diagram.drawio
grafana-otel-example/product-info-querier/: pyproject.toml  requirements.txt
grafana-otel-example/product-info-querier/src/: config.py  main.py  otel_instrumentation.py
grafana-otel-example/product-price-querier/: dockerfile  pyproject.toml  requirements.txt
grafana-otel-example/product-price-querier/src/: config.py  main.py  otel_instrumentation.py
